--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ env:
 jobs:
   build:
     runs-on: Ubuntu-22.04
-    name: Build IPK [Luci ${{ matrix.luci_ver }}]
+    name: Build IPK [${{ matrix.platform }}]
     strategy:
       fail-fast: false
       matrix:
@@ -264,7 +264,7 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-          tag_name: ${{ env.date }}
+          tag_name: ${{ env.date }}${{ matrix.platform }} 
           body_path: ${{ env.FIRMWARE }}/release.txt
           files: ${{ env.FIRMWARE }}/upload/*
 
