--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -247,7 +247,7 @@ jobs:
 
     - name: Upload firmware to release
       uses: softprops/action-gh-release@v2
-      if: steps.info.outputs.status == 'success'
+      if: steps.info.organize.status == 'success'
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
