--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: SDK Build Ipk
+name: SDK Build lunatic7 Ipk
 
 # Fix for broken build: https://github.com/softprops/action-gh-release/issues/236
 permissions:
@@ -39,7 +39,7 @@ env:
 jobs:
   build:
     runs-on: Ubuntu-22.04
-    name: Build IPK [${{ matrix.platform }}]
+    name: Build Lunatic7 IPK [${{ matrix.platform }}]
     strategy:
       fail-fast: false
       matrix:
