--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,12 @@ on:
       packages:
         description: 'OpenWrt packages（example: luci-app-example,luci-app-helloworld）'
         required: true
-        default: 'luci-app-example,luci-app-example2'
+        default: 'luci-app-argon-config,luci-app-openvpn-server-client'
 
-      config_repo:
-        description: 'Use json config repo true(1) or false(0) See ReadME'
+      config_pkg:
+        description: 'OpenWrt packages cfg（example: aria2,openvpn）'
         required: true
-        default: '{"Cache": "1", "UPLOAD_RELEASE": "1", "ALLKMOD": "1"}'
+        default: 'aria2'
 env:
   TZ: Asia/Shanghai
 
@@ -96,6 +96,7 @@ jobs:
         echo "date=$(date +'%m/%d_%Y_%H/%M')" >> $GITHUB_ENV
         echo "date2=$(date +'%Y/%m %d')" >> $GITHUB_ENV
         echo "date3=$(date +'%m.%d')" >> $GITHUB_ENV
+        chmod +x opt.sh
 
     - name: ${{ matrix.platform }} sdk download
       run: |
@@ -154,6 +155,10 @@ jobs:
           echo "CONFIG_ALL=n" >> .config
           echo "CONFIG_AUTOREMOVE=n" >> .config
           echo "CONFIG_SIGNED_PACKAGES=n" >> .config
+          IFS=',' read -r -a package_cfg <<< "${{ github.event.inputs.config_pkg }}"
+          for cfg in "${package_cfg[@]}"; do
+          bash $GITHUB_WORKSPACE/opt.sh "$cfg"
+          done
           IFS=',' read -r -a package_array <<< "${{ github.event.inputs.packages }}"
           for pkg in "${package_array[@]}"; do
           ./scripts/feeds install "$pkg"
