--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: SDK Build Ipk
+name: SDK Build lunatic7 Ipk
 
 # Fix for broken build: https://github.com/softprops/action-gh-release/issues/236
 permissions:
@@ -19,55 +19,6 @@ on:
         - 'mpc1917'
         - 'r08'
         - 'fmx1'
-      REPO:
-        description: 'Choose repo'
-        required: true
-        default: 'openwrt-24.10'
-        type: choice
-        options:
-        - 'openwrt-24.10'
-        - 'main'
-      SETIP:
-        description: 'Set ip address'
-        default: '192.168.6.1'
-        required: false
-        type: choice
-        options:
-        - '192.168.6.1'
-        - '192.168.7.1'
-        - '192.168.8.1'
-        - '192.168.9.1'
-        - '192.168.10.1'
-        - '192.168.11.1'
-        - '192.168.12.1'
-        - '192.168.16.1'
-        - '192.168.17.1'
-        - '192.168.18.1'
-        - '192.168.19.1'
-        - '192.168.20.1'
-        - '192.168.22.1'
-        - '192.168.33.1'
-        - '192.168.66.1'
-        - '192.168.67.1'
-        - '192.168.77.1'
-        - '192.168.78.1'
-        - '192.168.87.1'
-        - '192.168.88.1'
-        - '192.168.89.1'
-        - '192.168.96.1'
-        - '192.168.99.1'
-        - '192.168.100.1'
-        - '192.168.110.1'
-        - '192.168.120.1'
-        - '192.168.160.1'
-        - '192.168.166.1'
-        - '192.168.167.1'
-        - '192.168.177.1'
-        - '192.168.188.1'
-        - '172.16.0.1'
-        - '172.18.0.1'
-        - '10.0.0.1'
-        - '10.88.0.1'
       patch_repo:
         description: 'Use json patch repo true(1) or false(0) See ReadME'
         required: true
@@ -76,31 +27,19 @@ on:
       packages:
         description: 'OpenWrt packages（example: luci-app-example,luci-app-helloworld）'
         required: true
-        default: 'luci-app-example,luci-app-example2'
+        default: 'luci-app-argon-config,luci-app-openvpn-server-client'
 
-      config_repo:
-        description: 'Use json config repo true(1) or false(0) See ReadME'
+      config_pkg:
+        description: 'OpenWrt packages cfg（example: aria2,openvpn）'
         required: true
-        default: '{"Cache": "1", "UPLOAD_RELEASE": "1", "ALLKMOD": "1"}'
+        default: 'aria2'
 env:
   TZ: Asia/Shanghai
 
 jobs:
-  prepare:
-    runs-on: ubuntu-22.04
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    strategy:
-      matrix:
-        include:
-        - rockchip: mpc1917
-        - rockchip: tpm312
-        - rockchip: r08
-        - rockchip: fmx1
-
   build:
     runs-on: Ubuntu-22.04
-    name: Build IPK [Luci ${{ matrix.luci_ver }}]
+    name: Build Lunatic7 IPK [${{ matrix.platform }}]
     strategy:
       fail-fast: false
       matrix:
@@ -128,19 +67,6 @@ jobs:
     steps:
     - name: 检查
       uses: actions/checkout@main
-
-    - name: 释放Ubuntu磁盘空间
-      uses: endersonmenezes/free-disk-space@v2
-      with:
-        remove_android: true
-        remove_dotnet: true
-        remove_haskell: true
-        remove_tool_cache: true
-        remove_swap: true
-        remove_packages: "azure-cli google-cloud-cli microsoft-edge-stable google-chrome-stable firefox postgresql* temurin-* *llvm* mysql* dotnet-sdk-*"
-        remove_packages_one_command: true
-        remove_folders: "/usr/share/swift /usr/share/miniconda /usr/share/az* /usr/share/glade* /usr/local/lib/node_modules /usr/local/share/chromium /usr/local/share/powershell"
-        testing: false
 
     - name: 初始化环境
       env:
@@ -170,10 +96,12 @@ jobs:
         echo "date=$(date +'%m/%d_%Y_%H/%M')" >> $GITHUB_ENV
         echo "date2=$(date +'%Y/%m %d')" >> $GITHUB_ENV
         echo "date3=$(date +'%m.%d')" >> $GITHUB_ENV
+        echo "WRT_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+        chmod +x opt.sh
 
     - name: ${{ matrix.platform }} sdk download
-        run: |
-          wget ${{ matrix.sdk_url }}
+      run: |
+          wget -q ${{ matrix.sdk_url }}
           file_name=$(echo ${{matrix.sdk_url}} | awk -F/ '{print $NF}')
           mkdir sdk
           if [[ $file_name == *.tar.xz ]]; then
@@ -186,17 +114,22 @@ jobs:
           fi
           cd sdk
           ls
+          git clone https://github.com/lunatickochiya/AP-action package/kochiya
+          cd package/kochiya
+          find . -mindepth 1 ! -path "./package" ! -path "./package/*" -exec rm -rf {} +
+          cd ../..
+          
 
-      - name: ${{ matrix.platform }} feeds configuration packages
-        run: |
+    - name: ${{ matrix.platform }} feeds configuration packages
+      run: |
           cd sdk
           cat > feeds.conf.default << EOF
-          src-git lunatic7 https://github.com/lunatickochiya/actionbased-openwrt-packages.git
           src-git base https://github.com/openwrt/openwrt.git;openwrt-${{ matrix.sdk_ver }}
           src-git packages https://github.com/openwrt/packages.git;openwrt-${{ matrix.sdk_ver }}
           src-git luci https://github.com/openwrt/luci.git;openwrt-${{ matrix.sdk_ver }}
           src-git routing https://github.com/openwrt/routing.git;openwrt-${{ matrix.sdk_ver }}
           src-git telephony https://github.com/openwrt/telephony.git;openwrt-${{ matrix.sdk_ver }}
+          src-git lunatic7 https://github.com/lunatickochiya/actionbased-openwrt-packages.git
           EOF
 
 
@@ -223,60 +156,71 @@ jobs:
           echo "CONFIG_ALL=n" >> .config
           echo "CONFIG_AUTOREMOVE=n" >> .config
           echo "CONFIG_SIGNED_PACKAGES=n" >> .config
+          IFS=',' read -r -a package_cfg <<< "${{ github.event.inputs.config_pkg }}"
+          for cfg in "${package_cfg[@]}"; do
+          bash $GITHUB_WORKSPACE/opt.sh "$cfg"
+          done
           IFS=',' read -r -a package_array <<< "${{ github.event.inputs.packages }}"
           for pkg in "${package_array[@]}"; do
           ./scripts/feeds install "$pkg"
           echo "CONFIG_PACKAGE_$pkg=m" >> .config
+          done
           for pkg in "${package_array[@]}"; do
           awk -v pkg="$pkg" '$0 ~ pkg { print }' .config
           done
+          cat .config
           make defconfig
 
     - name: ${{ matrix.platform }} download
-        run: |
+      run: |
           cd sdk
           make download -j$(nproc)
           find dl -size -1024c -exec ls -l {} \;
 
     - name: ${{ matrix.platform }} compile
-        id: compile
-        run: |
+      id: compile
+      run: |
           cd sdk
           IFS=',' read -r -a package_array <<< "${{ github.event.inputs.packages }}"
           for package in "${package_array[@]}"; do
               if [ -d "feeds/lunatic7/$package" ]; then
                   echo "-----------begin compile $package ---------------"
                   sleep 10s
-                  make package/feeds/lunatic7/$package/compile -j$(nproc) V=s
+                  make package/feeds/lunatic7/$package/compile -j$(($(nproc)+1)) || make package/feeds/lunatic7/$package/compile -j1 V=s
                   echo "-----------compiled $package ---------------"
                   echo ""
               fi
+              if [ -d "package/kochiya/package/kochiya/$package" ]; then
+                  echo "-----------begin compile $package ---------------"
+                  sleep 10s
+                  make package/kochiya/package/kochiya/$package/compile -j$(nproc) || make package/kochiya/package/kochiya/$package/compile -j1 V=s
+                  echo "-----------compiled kochiya $package ---------------"
+                  echo ""
+              fi
           done
-          make V=s -j$(nproc)
 
           echo "status=success" >> $GITHUB_OUTPUT
 
-      - name: Organize ${{ matrix.platform }} files
-        id: organize
-        if: steps.compile.outputs.status == 'success'
-        run: |
+    - name: Organize ${{ matrix.platform }} files
+      id: organize
+      if: steps.compile.outputs.status == 'success'
+      run: |
           cd sdk
           mkdir upload
 
-          zip -jr upload/packages_ipk_${{ matrix.platform }}.zip bin/packages/*
-          cd ../
+          zip -jr upload/"$WRT_DATE"_packages_ipk_${{ matrix.platform }}.zip bin/packages/*
           touch release.txt
-
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+          cd ../
           echo "status=success" >> $GITHUB_OUTPUT
 
     - name: Upload firmware to release
-        uses: softprops/action-gh-release@v2
-        if: steps.info.outputs.status == 'success'
-        env:
+      uses: softprops/action-gh-release@v2
+      if: steps.organize.outputs.status == 'success'
+      env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.date }}
+      with:
+          tag_name: ${{ env.date }}_${{ matrix.platform }}
           body_path: ${{ env.FIRMWARE }}/release.txt
           files: ${{ env.FIRMWARE }}/upload/*
 
