--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
         echo "date=$(date +'%m/%d_%Y_%H/%M')" >> $GITHUB_ENV
         echo "date2=$(date +'%Y/%m %d')" >> $GITHUB_ENV
         echo "date3=$(date +'%m.%d')" >> $GITHUB_ENV
-        echo "WRT_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+        # echo "WRT_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
         chmod +x opt.sh
 
     - name: ${{ matrix.platform }} sdk download
@@ -104,6 +104,7 @@ jobs:
           wget -q ${{ matrix.sdk_url }}
           file_name=$(echo ${{matrix.sdk_url}} | awk -F/ '{print $NF}')
           mkdir sdk
+          mv -f package-configs/ sdk/package-configs
           if [[ $file_name == *.tar.xz ]]; then
             tar -xJf $file_name -C ./sdk --strip-components=1
           elif [[ $file_name == *.tar.zst ]]; then
@@ -209,7 +210,7 @@ jobs:
           cd sdk
           mkdir upload
 
-          zip -jr upload/"$WRT_DATE"_packages_ipk_${{ matrix.platform }}.zip bin/packages/*
+          zip -jr upload/packages_ipk_${{ matrix.platform }}.zip bin/packages/*
           touch release.txt
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           cd ../
