--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,6 +136,9 @@ jobs:
 
           ./scripts/feeds update -a
           ./scripts/feeds install -a
+    - name: ${{ matrix.platform }} patch and mod config
+      run: |
+          cd sdk
           #--------------------------------------begin_patches------------------------------------------
           echo "Start applying the patch"
 
